<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/em_que_ano_voc_nasceu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textview1"
        app:layout_constraintStart_toStartOf="@id/textview1"
        android:layout_marginTop="15dp"
        android:text="@string/_2021"
        android:digits="0123456789"
        />

    <Button
        android:id="@+id/button1"
        android:layout_height="40dp"
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="@id/textview1"
        app:layout_constraintTop_toTopOf="@id/edittext1"
        android:background="@drawable/button"
         />

</androidx.constraintlayout.widget.ConstraintLayout>