<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelecaoJogo">

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/selecione_o_jogo"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/button2"
        android:layout_height="40dp"
        android:layout_width="150dp"
        app:layout_constraintTop_toBottomOf="@id/textview2"
        android:layout_marginTop="20dp"
        android:text="@string/mega_sena"
        app:layout_constraintStart_toStartOf="@id/textview2"
        app:layout_constraintEnd_toEndOf="@id/textview2"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/button3"
        android:layout_height="40dp"
        android:layout_width="150dp"
        app:layout_constraintTop_toBottomOf="@id/button2"
        android:layout_marginTop="20dp"
        android:text="@string/quina"
        app:layout_constraintStart_toStartOf="@id/textview2"
        app:layout_constraintEnd_toEndOf="@id/textview2"
        android:background="@drawable/button"/>


</androidx.constraintlayout.widget.ConstraintLayout>